--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,39 @@
-table {
+.table-container {
   width: 100%;
   border-collapse: collapse;
   border: 1px solid #ccc;
   margin: 0 auto;
   background-color: #fff;
+  justify-content: center;
+  max-width: 100%;
+  table-layout: auto;
+  word-wrap: break-word;
 }
 
 th,
 td {
   padding: 10px;
+  padding-right: 2rem;
   text-align: left;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
 }
 
-th {
-  background-color: #f5f5f5;
+tbody {
+  background: linear-gradient(to bottom, rgb(172, 169, 169), #a9a9a9);
+  color: black;
+}
+
+.btn-action {
+  padding-right: 2rem;
 }
 
 button {
-  background-color: #04aa6d;
+  background-color: #1e966a;
   color: white;
   padding: 0.55rem;
   border: none;
   cursor: pointer;
-  width: 20%;
 }
 
 .task-form {
@@ -32,6 +43,7 @@ button {
 body {
   background: #8758ff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -42,9 +54,11 @@ body {
 
 .TaskWrapper {
   background: #1a1a40;
-  margin-top: 2rem;
-  padding: 5rem;
-  border-radius: 5px;
+  margin-top: 5rem;
+  padding: 2rem;
+  padding-top: 0.55rem;
+  border-radius: 7px;
+  max-width: 100%;
 }
 
 .task-input {
@@ -54,8 +68,8 @@ body {
   padding: 0.5rem 1rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
-  margin-right: 1rem;
-  width: 65%;
+  margin-right: 1.5rem;
+  width: 300px;
   color: #fff;
 }
 
@@ -65,7 +79,11 @@ h1 {
 }
 
 .update-btn {
-  margin-left: 0.2rem;
+  padding-right: 5rem;
+  margin-left: 0.5rem;
+  position: absolute;
+  float: right;
+  color: black;
 }
 
 .actions {
@@ -74,11 +92,46 @@ h1 {
 }
 
 .actions > * {
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .table-container::after {
   content: "";
   clear: both;
   display: table;
+}
+
+.table-text {
+  word-wrap: break-word;
+  max-width: 300px;
+  overflow: hidden;
+}
+
+.delete-btn {
+  color: red;
+}
+
+.completed {
+  color: brown;
+  text-decoration: line-through;
+}
+
+.pending {
+  color: rgb(235, 141, 18);
+}
+
+.done {
+  color: rgb(0, 144, 0);
+}
+
+.modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
